@@ -1,6 +1,7 @@
 /*
  *
  * Copyright (C) 2003-2009 Sebastian Trueg <trueg@k3b.org>
+ * Copyright (C) 2011 Michal Malek <michalm@jabster.pl>
  *
  * This file is part of the K3b project.
  * Copyright (C) 1998-2009 Sebastian Trueg <trueg@k3b.org>
@@ -97,6 +98,7 @@ namespace K3b {
          * returns false.
          */
         void removeItem( DataItem* item );
+        void removeItems( DirItem* parent, int start, int count );
 
         /**
          * Simply calls reparent.
